--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -124,11 +124,16 @@ html {
     }
   }
   p {
+    position: relative;
+
     font-size: 1.3rem;
     @media (max-width: 992px) {
       font-size: 1.1rem;
     }
     width: 60%;
+    @media (max-width: 992px) {
+      width: 70%;
+    }
     margin-top: 4rem;
     // z-index: 10;
   }
